--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "Data Source=InMemorySample;Mode=Memory;Cache=Shared",
   },
   "Logging": {
     "LogLevel": {
