--- a/insecure-bank-net.csproj
+++ b/insecure-bank-net.csproj
@@ -16,6 +16,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.14" />
     <PackageReference Include="Sustainsys.Saml2" Version="2.5.0" />
+    <PackageReference Include="System.Data.Common" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
