Disable toolbar by default

--- a/.gitignore
+++ b/.gitignore
@@ -578,3 +578,4 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,aspnetcore,dotnetcore,rider
 
 app.db
+.vscode
