Use multiple connections for the database

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=InMemorySample;Mode=Memory;Cache=Shared",
+    "DefaultConnection": "Data Source=InMemorySample;Mode=Memory;Cache=Shared"
   },
   "Logging": {
     "LogLevel": {
